--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
         <div class="container_calendar__box-header_btn-month">
           <button class="prev_month_btn">назад</button>
           <button class="next_month_btn">вперед</button>
-          <div class="month">Ноябрь</div>
+          <div id="month" class="month"></div>
         </div>
         <div class="container_calendar__box-header_btn-task-calendar">
           <button class="calendar">календарь</button>
