добавил ячейки с датами предыдущего и следующего месяца

--- a/src/index.html
+++ b/src/index.html
@@ -20,13 +20,13 @@
       </div>
       <div class="container_calendar__box-center">
         <ul class="container_calendar__box-weeks">
-          <li class="days-weeks">Пн</li>
-          <li class="days-weeks">Вт</li>
-          <li class="days-weeks">Ср</li>
-          <li class="days-weeks">Чт</li>
-          <li class="days-weeks">Пт</li>
-          <li class="days-weeks">Сб</li>
-          <li class="days-weeks">Вс</li>
+          <li class="days-weeks">ПН</li>
+          <li class="days-weeks">ВТ</li>
+          <li class="days-weeks">СР</li>
+          <li class="days-weeks">ЧТ</li>
+          <li class="days-weeks">ПТ</li>
+          <li class="days-weeks">СБ</li>
+          <li class="days-weeks">ВС</li>
         </ul>
         <div class="container_calendar__box-day"></div>
       </div>
