--- a/src/index.html
+++ b/src/index.html
@@ -9,24 +9,24 @@
     <div class="container_calendar">
       <div class="container_calendar__box-header">
         <div class="container_calendar__box-header_btn-month">
-          <button class="prev_month_btn">назад</button>
-          <button class="next_month_btn">вперед</button>
+          <button class="prev_month_btn button">назад</button>
+          <button class="next_month_btn button">вперед</button>
           <div id="month" class="month"></div>
         </div>
         <div class="container_calendar__box-header_btn-task-calendar">
-          <button class="calendar">календарь</button>
-          <button class="task">задачи</button>
+          <a href="index.html" id="calendar" class="button">календарь</a>
+          <a href="task.html" id="task" class="button">задачи</a>
         </div>
       </div>
       <div class="container_calendar__box-center">
         <ul class="container_calendar__box-weeks">
-          <li class="days-weeks">ПН</li>
-          <li class="days-weeks">ВТ</li>
-          <li class="days-weeks">СР</li>
-          <li class="days-weeks">ЧТ</li>
-          <li class="days-weeks">ПТ</li>
-          <li class="days-weeks">СБ</li>
-          <li class="days-weeks">ВС</li>
+          <li class="days-weeks">Пн</li>
+          <li class="days-weeks">Вт</li>
+          <li class="days-weeks">Ср</li>
+          <li class="days-weeks">Чт</li>
+          <li class="days-weeks">Пт</li>
+          <li class="days-weeks">Сб</li>
+          <li class="days-weeks">Вс</li>
         </ul>
         <div class="container_calendar__box-day"></div>
       </div>
