--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,9 @@
           <li class="days-weeks">Вс</li>
         </ul>
         <div class="container_calendar__box-day"></div>
+        <form class="popup" action="">
+          <input type="text" placeholder="Добавьте название" required />
+        </form>
       </div>
     </div>
   </body>
