--- a/src/index.html
+++ b/src/index.html
@@ -33,8 +33,10 @@
         <form class="popup" action="">
           <span class="close-btn">&times;</span>
           <input
+            id="title"
             class="title"
             type="text"
+            name="title"
             placeholder="Добавьте название"
             required
           />
@@ -45,9 +47,9 @@
             placeholder="Добавьте описание"
             required
           ></textarea>
+          <button id="btn">кнопка</button>
         </form>
         <div class="window-background"></div>
-        <!-- Элемент фона (в случае, если необходимо) -->
       </div>
     </div>
   </body>
