--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
       <div class="container_calendar__box-header">
         <div class="container_calendar__box-header_btn-month">
           <button class="prev_month_btn button">назад</button>
-          <button class="next_month_btn button">вперед</button>
+          <button id="nextBtn" class="next_month_btn button">вперед</button>
           <div id="month" class="month"></div>
         </div>
         <div class="container_calendar__box-header_btn-task-calendar">
