--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
             required
           />
           <div id="month_popup" class="month_popup"></div>
+          <div class="dateMonthYear"></div>
           <textarea
             class="task-title"
             id="task-description"
@@ -50,6 +51,8 @@
           <button id="btnClosed">закрыть</button>
         </form>
         <div class="window-background"></div>
+        <button class="delete">удалить</button>
+        <button class="read">показать</button>
       </div>
     </div>
   </body>
