локально получаем объект с данными

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         </div>
         <div class="container_calendar__box-header_btn-task-calendar">
           <a href="index.html" id="calendar" class="button">календарь</a>
-          <a href="task.html" id="task" class="button">задачи</a>
+          <button id="task" class="button">задачи</button>
         </div>
       </div>
       <div class="container_calendar__box-center">
@@ -53,6 +53,7 @@
         <div class="window-background"></div>
         <button class="delete">удалить</button>
         <button class="read">показать</button>
+        <div class="block"></div>
       </div>
     </div>
   </body>
