функционал с сохранением задач готов

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
           <div id="month" class="month"></div>
         </div>
         <div class="container_calendar__box-header_btn-task-calendar">
-          <a href="index.html" id="calendar" class="button">календарь</a>
+          <!-- <a href="index.html" id="calendar" class="button">календарь</a> -->
           <button id="task" class="button">задачи</button>
         </div>
       </div>
@@ -53,7 +53,19 @@
         <div class="window-background"></div>
         <button class="delete">удалить</button>
         <button class="read">показать</button>
-        <div class="block"></div>
+        <div id="task-block" class="task-block">
+          <div class="box-btnAndText">
+            <p class="text-header-task">Мои задачи</p>
+            <span class="close-btn-task">&times;</span>
+          </div>
+          <div id="box-task" class="box-task">
+            <!-- <div class="item-task">
+              <div class="title-task">Название</div>
+              <div class="description-task">Описание</div>
+              <div class="date-task">12.12.2024</div>
+            </div> -->
+          </div>
+        </div>
       </div>
     </div>
   </body>
