--- a/src/index.html
+++ b/src/index.html
@@ -47,8 +47,10 @@
             placeholder="Добавьте описание"
             required
           ></textarea>
-          <button type="submit" id="btnSave">сохранить</button>
-          <button id="btnClosed">закрыть</button>
+          <div class="box-button">
+            <button type="submit" id="btnSave">сохранить</button>
+            <button id="btnClosed">закрыть</button>
+          </div>
         </form>
         <div class="window-background"></div>
         <button class="delete">удалить</button>
