--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,38 @@
     <title>Task Calendar</title>
   </head>
   <body>
-    <h1>Hello TS</h1>
+    <div class="calendar-container">
+      <div class="calendar-controls">
+        <button class="control-button-prev">Назад</button>
+        <div class="calendar-month" id="month"></div>
+        <button class="control-button-next">Вперед</button>
+        <button class="tasks" id="task">задачи</button>
+        <button class="btnDel" id="btnDeleteTask">удалить все задачи</button>
+      </div>
+
+      <div class="cell-container">
+        <div class="calendar-grid"></div>
+      </div>
+    </div>
+
+    <div class="popup" id="task-popup">
+      <div class="popup-content">
+        <span class="close-popup" id="close-popup">&times;</span>
+        <h2>Добавить задачу</h2>
+        <label for="task-title">Заголовок задачи:</label>
+        <input type="text" id="task-title" />
+        <label for="task-description">Описание задачи:</label>
+        <textarea id="task-description"></textarea>
+        <button id="save-task">Сохранить</button>
+      </div>
+    </div>
+
+    <div class="popupTasks" id="task-popupTasks">
+      <div class="popup-contentTasks">
+        <span class="close-popupTasks" id="close-popupTasks">&times;</span>
+        <h2>Добавленные задачи</h2>
+        <div class="listTask" id="taskContainer"></div>
+      </div>
+    </div>
   </body>
 </html>
